#CMake version
cmake_minimum_required(VERSION 3.0)

#Project name
set(myproject "examen")
project(${myproject})

#Requested C++ standard
if(CMAKE_VERSION GREATER "3.1.2")
    set(CMAKE_CXX_STANDARD 14) #we request C++ 14
    set(CMAKE_CXX_STANDARD_REQUIRED ON)
    SET(CMAKE_CXX_EXTENSIONS OFF)
else()
    if(CMAKE_COMPILER_IS_GNUCXX)
        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
    endif()
endif()

#Define the executable
add_executable(${PROJECT_NAME} src/examen.cpp)
